# libchess

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  Bitboard.h  CMakeLists.txt  CastlingRights.h  Color.h  Doxyfile  File.h  LICENSE.txt  Lookups.h  Move.h  Piece.h  PieceType.h  Position.h  README.md  Rank.h  Square.h  Tuner.h  UCIOption.h  UCIService.h  test.sh
.circleci/: config.yml  test.sh
.github/workflows/: ccpp.yml  test.yml
Position/: Attacks.h  Constructors.h  Getters.h  MoveGeneration.h  MoveIntegration.h  Utilities.h
UCIService/: UCIOption.h
internal/: MetaValueType.h  PolyglotRandoms.h  Zobrist.h
perft/: CMakeLists.txt  Perft.cpp  perfts.epd
tests/: BitboardTests.cpp  CMakeLists.txt  CastlingRights.cpp  CastlingRightsTests.cpp  Color.cpp  ColorTests.cpp  Move.cpp  MoveTests.cpp  Piece.cpp  PieceTests.cpp  PieceTypeTests.cpp  Position.cpp  PositionTests.cpp  UCIService.cpp  UCIServiceTests.cpp
